--- a/Task Manager/Views/Project/Index.cshtml
+++ b/Task Manager/Views/Project/Index.cshtml
@@ -11,20 +11,23 @@
     </div>
     <!-- /.row -->
     <div class="row">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-3">
-                            <i class="fa fa-comments fa-5x"></i>
+                            <i class="fa fa-spinner fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <div class="col-xs-6 text-center">
+                            <h2>New Added Task</h2>
+                        </div>
+                        <div class="col-xs-3 text-right">
                             <div class="huge">26</div>
-                            <div>New Comments!</div>
                         </div>
                     </div>
                 </div>
                 <a href="#">
+
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -33,20 +36,23 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-green">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-3">
-                            <i class="fa fa-tasks fa-5x"></i>
+                            <i class="fa fa-pencil-square-o fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <div class="col-xs-6 text-center">
+                            <h2>Unassigned Task</h2>
+                        </div>
+                        <div class="col-xs-3 text-right">
                             <div class="huge">12</div>
-                            <div>New Tasks!</div>
                         </div>
                     </div>
                 </div>
                 <a href="#">
+
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -55,16 +61,19 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="panel panel-yellow">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-3">
-                            <i class="fa fa-shopping-cart fa-5x"></i>
+                            <i class="fa fa-hand-pointer-o fa-5x"></i>
                         </div>
-                        <div class="col-xs-9 text-right">
+                        <div class="col-xs-6 text-center">
+                            <h2>My Today's Task</h2>
+                        </div>
+                        <div class="col-xs-3 text-right">
                             <div class="huge">124</div>
-                            <div>New Orders!</div>
+
                         </div>
                     </div>
                 </div>
@@ -77,28 +86,28 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
-            <div class="panel panel-red">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-support fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-right">
-                            <div class="huge">13</div>
-                            <div>Support Tickets!</div>
+        @*<div class="col-lg-3 col-md-6">
+                <div class="panel panel-red">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <i class="fa fa-support fa-5x"></i>
+                            </div>
+                            <div class="col-xs-9 text-right">
+                                <div class="huge">13</div>
+                                <div>Support Tickets!</div>
+                            </div>
                         </div>
                     </div>
+                    <a href="#">
+                        <div class="panel-footer">
+                            <span class="pull-left">View Details</span>
+                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                            <div class="clearfix"></div>
+                        </div>
+                    </a>
                 </div>
-                <a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left">View Details</span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>
-            </div>
-        </div>
+            </div>*@
     </div>
     <!-- /.row -->
     <!-- /.row -->
