--- a/Task Manager/Views/Shared/_Home.cshtml
+++ b/Task Manager/Views/Shared/_Home.cshtml
@@ -263,13 +263,14 @@
                         <!-- /input-group -->
                     </li>
                     <li>
-                        @Html.ActionLink("Dashboard", "Index", "Task", new { @class = "fa fa-dashboard fa-fw" })
+                        @Html.ActionLink("Dashboard", "Index", "Dashboard", new { @class = "fa fa-dashboard fa-fw" })
 
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Customer<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
+                              
                                 @Html.ActionLink("Create Customer", "CreateCustomer", "Customer")
 
                             </li>
