--- a/Task Manager/Content/Site.css
+++ b/Task Manager/Content/Site.css
@@ -10,7 +10,18 @@
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
+select#CustomerDropdown {
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 .btn_login {
     background: #7cbcd6;
     background-image: -webkit-linear-gradient(top, #7cbcd6, #7cbcd6);
