--- a/Task Manager/Views/Dashboard/Index.cshtml
+++ b/Task Manager/Views/Dashboard/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Home.cshtml";
 }
@@ -52,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="#" data-toggle="modal" data-target="#myModal">
 
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
@@ -112,4 +111,23 @@
     </div>
     <!-- /.row -->
     <!-- /.row -->
+</div>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
 </div>
