--- a/Task Manager/Views/Task/CreateTask.cshtml
+++ b/Task Manager/Views/Task/CreateTask.cshtml
@@ -125,7 +125,7 @@
         dat = [];
         $.ajax({
             async: false,
-            url: '/api/TaskApi/'+0,
+            url: '/api/TaskApi/'+"0",
             type: 'GET',
             success: function (data) {
                 console.log(data);
