--- a/Task Manager/Views/Project/ViewProject.cshtml
+++ b/Task Manager/Views/Project/ViewProject.cshtml
@@ -25,8 +25,9 @@
                                 <th>Name</th>
                                 <th>Start Date</th>
                                 <th>End Date</th>
-                                <th>Customer</th>
-                                <th>Customer Name</th>
+                                <th>Customer </th>
+                                <th>Resco Manager</th>
+                                <th>Customer Manager</th>
                                 <th>Customer Email</th>
                                 <th>Customer Mobile</th>
                                 <th>Actions</th>
@@ -37,7 +38,8 @@
                                 <td>Hamamd </td>
                                 <td>05/09/2017</td>
                                 <td>15/09/2017</td>
-                                <td>Resco</td>
+                                <td>customer new<td>
+                                <td>Resco Manager</td>
                                 <td>Tayyaba</td>
                                 <td>Tayyaba@HBL.com</td>
                                 <td>+923000314981</td>
@@ -73,7 +75,7 @@
             success: function (data) {
                 console.log(data);
                 for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr><td>" + data[i].projectName + "</td><td>" + data[i].startDate.substring(0, 10) + "</td><td>" + data[i].endDate.substring(0, 10) + "</td><td>" + data[i].customerName + "</td><td>" + data[i].projectManager + "</td><td>" + data[i].Email + "</td><td>" + data[i].PhoneNumber + "</td><td><button value='Update' class='btn btn-primary fa fa-check' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
+                    $("#dynamic-Grid").append("<tr><td>" + data[i].projectName + "</td><td>" + data[i].startDate.substring(0, 10) + "</td><td>" + data[i].endDate.substring(0, 10) + "</td><td>" + data[i].projectManager + "</td><td>" + data[i].customerName + "</td><td>" + data[i].projectManager + "</td><td>" + data[i].Email + "</td><td>" + data[i].PhoneNumber + "</td><td><button value='Update' class='btn btn-primary fa fa-check' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
 
                 }
             },
