--- a/Task Manager/Views/Dashboard/Index.cshtml
+++ b/Task Manager/Views/Dashboard/Index.cshtml
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" onclick="added()">
+                <a href="#" onclick="Dashboard('a')">
 
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" onclick="Unassigned">
+                <a href="#" onclick="Dashboard('u')">
 
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" onclick="today">
+                <a href="#" onclick="Dashboard('t')">
                     <div class="panel-footer">
                         <span class="pull-left">View Details</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -92,13 +92,9 @@
 </div>
 <script type="text/javascript">
 
-    function added() {
-        alert("added");
+    function Dashboard(val)
+    {
+        alert(val);
     }
-    function Unassigned() {
-        alert("Un Assigned")
-    }
-    function today() {
-        alert("Todays Task")
-    }
+
 </script>
