--- a/Task Manager/Views/Customer/ViewCustomer.cshtml
+++ b/Task Manager/Views/Customer/ViewCustomer.cshtml
@@ -5,7 +5,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Tables</h1>
+            <h1 class="page-header">Customer Detail</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -14,7 +14,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Users Detail
+                    Customer Detail
                     @*<button type="button" class="btn btn-primary" onclick="gridLoad()">Update</button>*@
                 </div>
                 <!-- /.panel-heading -->
