--- a/Task Manager/Views/Project/CreateProject.cshtml
+++ b/Task Manager/Views/Project/CreateProject.cshtml
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="col-lg-12 spacing">
                                     <div class="col-lg-6 ">
-                                        <label>Client Manager</label>
+                                        <label>Customer Manager</label>
                                     </div>
                                  
                                     
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="col-lg-12 spacing">
                                     <div class="col-lg-6 ">
-                                        <label>Contact Number</label>
+                                        <label>Customer Contact Number</label>
                                     </div>
                                     <div class="col-lg-6 ">
                                         <div class="col-lg-2"><label class="abc">+92</label></div>
@@ -85,7 +85,7 @@
                                 </div>
                                 <div class="col-lg-12 spacing">
                                     <div class="col-lg-6 ">
-                                        <label>Email</label>
+                                        <label>Customer Email</label>
                                     </div>
                                     <div class="col-lg-6 ">
                                         <input class="form-control" type="email" id="Email" placeholder="example@gmail.com" required="required">
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="col-lg-12 spacing">
                                     <div class="col-lg-6 ">
-                                        <label>Address</label>
+                                        <label>Customer Address</label>
                                     </div>
                                     <div class="col-lg-6 ">
                                         <input class="form-control" type="text" id="Address" placeholder=" WA 98052-7329. " required="required">
