--- a/Task Manager/Views/Shared/_Home.cshtml
+++ b/Task Manager/Views/Shared/_Home.cshtml
@@ -239,7 +239,8 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        @Html.ActionLink("Logout", "Index", "Home")
+                    
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
