--- a/Task Manager/Views/Shared/_Home.cshtml
+++ b/Task Manager/Views/Shared/_Home.cshtml
@@ -240,7 +240,7 @@
                     <li class="divider"></li>
                     <li>
                         @Html.ActionLink("Logout", "Index", "Home")
-                    
+
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
@@ -264,14 +264,14 @@
                         <!-- /input-group -->
                     </li>
                     <li>
+                       
                         @Html.ActionLink("Dashboard", "Index", "Dashboard")
-
                     </li>
                     <li>
-                        <a ><i class="fa fa-bar-chart-o fa-fw"></i> Customer<span class="fa arrow"></span></a>
+                        <a><i class="fa fa-user-plus fa-fw"></i> Customer<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                              
+
                                 @Html.ActionLink("Create Customer", "CreateCustomer", "Customer")
 
                             </li>
@@ -283,7 +283,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a><i class="fa fa-bar-chart-o fa-fw"></i> Projects <span class="fa arrow"></span></a>
+                        <a><i class="fa fa-building fa-fw"></i> Projects <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 @Html.ActionLink("Create Projects", "CreateProject", "Project")
@@ -297,7 +297,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a><i class="fa fa-wrench fa-fw"></i> User<span class="fa arrow"></span></a>
+                        <a><i class="fa fa-users fa-fw"></i> Users<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 @Html.ActionLink("Create User", "CreateUser", "User")
@@ -312,7 +312,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a><i class="fa fa-bar-chart-o fa-fw"></i> Task<span class="fa arrow"></span></a>
+                        <a><i class="fa fa-edit fa-fw"></i> Task<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 @Html.ActionLink("Create Task", "CreateTask", "Task")
