--- a/Task Manager/Views/Customer/ViewCustomer.cshtml
+++ b/Task Manager/Views/Customer/ViewCustomer.cshtml
@@ -30,19 +30,7 @@
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody id="dynamic-Grid">
-                            <tr class="odd gradeA">
-                                <td>Customer</td>
-                                <td>+9290078601</td>
-                                <td>Gulshan</td>
-                                <td>www.abc.com</td>
-                                <td>abc@gmail.com</td>
-                                <td class="">
-                                    <button type="button" class="btn btn-primary fa fa-check"></button>
-                                    <button type="button" class="btn btn-danger fa fa-times"></button>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tbody id="dynamic-Grid"></tbody>
                     </table>
                     <!-- /.table-responsive -->
                 </div>
@@ -57,6 +45,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $.ajax({
+            async:false,
             url: '/api/CustomerApi/',
             type: 'GET',
             contentType: "application/json;charset=utf-8",
