sesion corrected from errors

--- a/Task Manager/Views/Shared/_Home.cshtml
+++ b/Task Manager/Views/Shared/_Home.cshtml
@@ -14,6 +14,7 @@
     <link href="~/Content/Theme CSS/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="../Content/Theme CSS/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="../Content/Theme CSS/dataTables.bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../Content/Theme CSS/dataTables.responsive.css" rel="stylesheet" type="text/css">
