--- a/Task Manager/Views/Home/Index.cshtml
+++ b/Task Manager/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 </p>
 <p class="login button">
     <button class="btn_login" onclick="Login()">LOGIN</button>
-    <button type="button" class="btn_login" data-toggle="modal" data-target="#myModal">Complain</button>
+    <button type="button" class="btn_login" data-toggle="modal" data-target="#myModal">Ticket</button>
 </p>
 
 
@@ -32,7 +32,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title center">Customer complaint (Ticket Generator)</h4>
+                <h4 class="modal-title center">Ticket Generator</h4>
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -47,7 +47,7 @@
                                         <label>User Name</label>
                                     </div>
                                     <div class="col-lg-6 ">
-                                        <input class="form-control" id="user_name" placeholder="User Name" required="required">
+                                        <input class="" id="user_name" placeholder="User Name" required="required">
                                     </div>
                                 </div>
                                 <div class="col-lg-12 spacing">
@@ -55,7 +55,7 @@
                                         <label>Email Address</label>
                                     </div>
                                     <div class="col-lg-6">
-                                        <input class="form-control" type="email" id="Email" placeholder="Example12@Gmail.com" required="required">
+                                        <input class="" type="email" id="Email" placeholder="Example12@Gmail.com" required="required">
                                     </div>
                                 </div>
                                 <div class="col-lg-12 spacing">
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="col-lg-2"><label class="abc">+92</label></div>
-                                        <div class="col-lg-10"><input class="form-control" type="number" id="MobileNo" placeholder="3001234567" required="required"></div>
+                                        <div class="col-lg-10"><input class="" type="number" id="MobileNo" placeholder="3001234567" required="required"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 spacing">
@@ -72,7 +72,7 @@
                                         <label>Customer Code</label>
                                     </div>
                                     <div class="col-lg-6 ">
-                                        <input class="form-control" type="number" id="custcode" placeholder="12345">
+                                        <input class="" type="number" id="custcode" placeholder="12345" onfocusout="DDL(this.value)">
                                     </div>
                                 </div>
                                 <div class="col-lg-12 spacing">
@@ -80,7 +80,7 @@
                                         <label>Project Name</label>
                                     </div>
                                     <div class="col-lg-6">
-                                        <select id="ProjectDropdown"></select>
+                                        <select id="ProjectDropdown" class="ddlproject"></select>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 spacing">
@@ -88,11 +88,11 @@
                                         <label>Describe Issue</label>
                                     </div>
                                     <div class="col-lg-6">
-                                        <textarea class="form-control" type="text" id="Desc" cols="22" rows="2"> </textarea>
+                                        <textarea class="form-control" type="text" id="Desc" cols="22" rows="2" style="margin-bottom:5px;"> </textarea>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 spacing">
-                                    <button class="btn btn-success" value="Add" onclick="Add()"> Send </button>
+                                <div class="col-lg-offset-6 col-lg-6 spacing">
+                                    <button class="btn btn-success" value="Add" onclick="Add()" > Send </button>
                                 </div>
                             </div>
                             <!-- /.col-lg-6 (nested) -->
@@ -112,27 +112,25 @@
 
     </div>
 </div>
-</div>
 
 
 
 
 <script type="text/javascript">
 
-    //$(document).ready(function () {
-    //    $.ajax({
-    //        async: false,
-    //        url: '/api/HomeApi/',
-    //        type: 'GET',
-    //        contentType: "application/json;charset=utf-8",
-    //        dataType: "json",
-    //        success: function (data) {
-    //            console.log(data);
-              
-    //        },
-    //        error: function () { alert('Data Not Showing'); }
-    //    });
-    //});
+    $(document).ready(function () {
+        $.ajax({
+            async: false,
+            url: '/api/HomeApi/',
+            type: 'GET',
+            contentType: "application/json;charset=utf-8",
+            dataType: "json",
+            success: function (data) {
+                dropDown = data;
+            },
+            error: function () { alert('Data Not Showing'); }
+        });
+    });
 
 
 
@@ -165,11 +163,11 @@
         else if (validateEmail(email) == false) { alert("Please enter Email"); }
         else if (pnum == "" || pnum.length != 10) { alert("Please enter Mobile Number"); }
         else if (code == "") { alert("Please enter Customer Code"); }
-        //else if (Project == "") { alert("Please Select Project Name"); }
+        else if (Project == "") { alert("Please Enter Correct Customer Code"); }
         else if (issue == "") { alert("Please Enter the issue"); }
         else
         {
-            var model = { name: $("#user_name").val(), email: $("#Email").val(), contact: $("#MobileNo").val(), customerId: $("#custcode").val(), projectId: "6", issue: $("#Desc").val() };
+            var model = { name: $("#user_name").val(), email: $("#Email").val(), contact: $("#MobileNo").val(), customerId: $("#custcode").val(), projectId: $("#ProjectDropdown").val(), issue: $("#Desc").val() };
             console.log(model);
             $.ajax({
                 async: false,
@@ -188,6 +186,17 @@
             });
         }
     }
+    function DDL(val) {
+        var xyz = $('#ProjectDropdown');
+        xyz.empty();
+        for (var i = 0; i < dropDown.length; i++) {
+            if (dropDown[i].customerId == val) {
+                for (var j = 0; j < dropDown[i].projects.length; j++) {
+                    $('#ProjectDropdown').append($('<option></option>').val(dropDown[i].projects[j].id).html(dropDown[i].projects[j].name));
+                }
 
+            }
+        }
+    }
 
 </script>
